--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.22.0",
     "@clerk/nextjs": "^6.9.12",
+    "@langchain/anthropic": "^0.3.12",
+    "@langchain/core": "^0.3.31",
+    "@langchain/langgraph": "^0.2.41",
+    "@langchain/openai": "^0.3.17",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@wxflows/sdk": "^0.2.0-beta.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
+    "langchain": "^0.3.11",
     "lucide-react": "^0.471.2",
     "next": "15.1.4",
     "radix-ui": "^1.0.1",
