--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-timeago": "^4.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
+    "react-timeago": "^7.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
